--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/macarons.html">Italian Macarons</a>
+    <p>Here are a list of recipes that I have put together.</p>
+   <ul> 
+   <li> <a href="./recipes/macarons.html">Italian Macarons</a> </li>
+   <li> <a href="./recipes/biscuits.html">Biscuits</a></li>
+   <li> <a href="./recipes/baguette.html">Baguette</a></li>
+   </ul>
+   <p>To learn more about my journey, click 
+   <a href="./README.md">here</a>.</p>
 </body>
 </html>
